sliders dropdowns done

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -20,6 +20,10 @@
 	  		<li><a class="red-square" href="#activity">Réserver une activité</a></li>
 	  	</ul>
 	  </div>
+	  <div class="top-nav-resp">
+	  		<div class="dropdown-resp-button"></div>
+	  </div>
+	  <div class="dropdown-resp"></div>
 	  <div class="carousel-top">
 	  	<div class="slide slide1">
 	  	<img src="assets/img/top-carousel/visuel_1.jpg">
@@ -84,13 +88,14 @@
 					<p>Groupe Sodexo</p>
 				</div>
 	  		</div>
-	  		<select class="slider-nav-top-2" id="select1" >
+	  		<select class="slider-nav-top-2" autocomplete="off" id="select1" >
 				<option value="Nos métiers">Nos métiers</option>		
 				<option value="Notre pédagogie">Notre pédagogie</option>
 				<option value="Nos équipes">Nos équipes</option>
 				<option value="Nos espaces">Nos espaces</option>
 				<option value="Groupe Sodexo">Groupe Sodexo</option>
 	  		</select>
+	  		<img class="dropdown1" src="assets/img/responsive/fleche1.png">
 	  		<div class="top-info-carousel">
 	  			<div class="top-info-slide">
 	  				<img src="assets/img/middle-carousel/visuel_nos_metiers.jpg">
@@ -170,16 +175,18 @@
 	  			<img class="hidden-arrow arrow1" src="assets/img/bottom-carousel/fleche5.png">
 	  		</div>
 	  	</div>
-	  	<select class="slider-nav-2">
+	  	<select class="slider-nav-2" autocomplete="off" id="select2">
 	  		<option value="Les entreprises">Les entreprises</option>
 	  		<option value="Les centres commerciaux">Les centres commerciaux</option>
 	  		<option value="Les collectivités">Les collectivités</option>
 	  		<option value="Les écoles">Les écoles</option>
 	  		<option value="Les parents">Les parents</option>
 	  	</select>
+	  	<img class="dropdown2" src="assets/img/responsive/fleche2.png">
 	  	<div class="middle-info-carousel">
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
+	  			<img class="resp-arrow" src="assets/img/responsive/fleche.png">
 	  				<h1>Notre offre Entreprises</h1>
 	  				<p>Vous souhaitez améliorer la qualité de vie de vos collaborateurs-parents, découvrez nos services dédiés aux entreprises.</p>
 	  				<ul>
@@ -192,6 +199,7 @@
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
+	  			<img class="resp-arrow" src="assets/img/responsive/fleche.png">
 	  				<h1>Nos offres Centres Commerciaux</h1>
 	  				<p>Vous souhaitez fidéliser votre clientèle Familles et améliorer votre attractivité, découvrez nos services dédiés aux centres commerciaux.</p>
 	  				<ul>
@@ -203,6 +211,7 @@
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
+	  			<img class="resp-arrow" src="assets/img/responsive/fleche.png">
 	  				<h1>Notre offre Collectivités</h1>
 	  				<p>Vous souhaitez optimiser la gestion de vos structures et bénéficier de notre expertise métier, découvrez nos services dédiés aux collectivités.</p>
 	  				<ul>
@@ -214,6 +223,7 @@
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
+	  			<img class="resp-arrow" src="assets/img/responsive/fleche.png">
 	  				<h1>Notre offre Écoles</h1>
 	  				<p>Vous souhaitez enrichir votre offre pédagogique pendant les temps périscolaires, découvrez nos services dédiés aux écoles »</p>
 	  				<ul>
@@ -224,6 +234,7 @@
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
+	  			<img class="resp-arrow" src="assets/img/responsive/fleche.png">
 	  				<h1>Notre offre Parents</h1>
 	  				<p>Vous souhaitez proposer à vos enfants des activités d’éveil et de loisirs originales, découvrez nos services dédiés aux parents.</p>
 	  				<ul>
