--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -19,11 +19,18 @@
 	  		<li class="main-menu"><a href="#contact">Contact</a><img class="underline-main main3" src="assets/img/traits-menu.png"></li>
 	  		<li><a class="red-square" href="#activity">Réserver une activité</a></li>
 	  	</ul>
-	  </div>
-	  <div class="top-nav-resp">
+	  	<div class="top-nav-resp">
 	  		<div class="dropdown-resp-button"></div>
+	  	</div>
 	  </div>
-	  <div class="dropdown-resp"></div>
+	  <div class="dropdown-resp none">
+	  		<ul>
+	  			<li><a class="options" href="#about">Qui sommes-nous ?</a></li>
+	  			<li><a class="options" href="#offers">Nos offres</a></li>
+	  			<li><a class="options" href="#contact">Contact</a></li>
+	  			<li><a class="options red" href="#activity">Réserver une activité</a></li>
+	  		</ul>
+	  </div>
 	  <div class="carousel-top">
 	  	<div class="slide slide1">
 	  	<img src="assets/img/top-carousel/visuel_1.jpg">
