--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -153,7 +153,12 @@
 	  <div class="middle-info-upper">
 	  	<h1>Kids Attitude, vos solutions clé en main</h1>
 	  	<img src="/assets/img/trait_titre_1.png">
-	  	<p class="middle-info-p">Kids Attitude développe et exploite une offre multi-services de solutions d’accueil de loisirs sur-mesure pour ses clients.</p>
+	  	<div class="upper-quote">
+	  		<div class="quote1"></div>
+	  		<p class="middle-info-p">Kids Attitude développe et exploite une offre multi-services de solutions d’accueil de loisirs sur-mesure pour ses clients.</p>
+	  		<div class="quote2"></div>
+	  	</div>
+	  	<p class="resp-p">Kids Attitude développe et exploite une offre multi-services de solutions d’accueil de loisirs sur-mesure pour ses clients.</p>
 	  </div>
 	  	<div class="slider-nav">
 	  		<div class="nav-slide nav-slide1">
