--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -148,6 +148,10 @@
 	  			</div>
 	  		</div>
 	  	</div>
+	  	<div class="decor-img decor-slider-1"></div>
+	  	<div class="decor-img decor-slider-2"></div>
+	  	<div class="decor-img decor-slider-3"></div>
+	  	<div class="decor-img decor-slider-4"></div>
 	  </div>
 	  <div id="offers" class="middle-info">
 	  <div class="middle-info-upper">
@@ -207,7 +211,7 @@
 	  					<li>Évènements spéciaux (arbre de noël, garde d'urgence,...)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_les_entreprises.jpg">
+	  			<img class="middle-info-img" src="/assets/img/bottom-carousel/visuel_les_entreprises.jpg">
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
@@ -219,7 +223,7 @@
 	  					<li>Animations enfants lors d'évènements spéciaux</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_centre_commerciaux.jpg">
+	  			<img class="middle-info-img" src="/assets/img/bottom-carousel/visuel_centre_commerciaux.jpg">
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
@@ -231,7 +235,7 @@
 	  					<li>Conseils en gestion (audit, recrutement, coordination pédagogique, …)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_collectivites.jpg">
+	  			<img class="middle-info-img" src="/assets/img/bottom-carousel/visuel_collectivites.jpg">
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
@@ -242,7 +246,7 @@
 	  					<li>Ateliers ludo-éducatifs (théâtre, Autour de l’alimentation, Les petits scientifiques,…)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_ecoles.jpg">
+	  			<img class="middle-info-img" src="/assets/img/bottom-carousel/visuel_ecoles.jpg">
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
@@ -255,7 +259,7 @@
 	  					<li>Ateliers hebdomadaires (initiation à l’anglais, au cirque, …)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_parents.png">
+	  			<img class="middle-info-img" src="/assets/img/bottom-carousel/visuel_parents.png">
 	  		</div>
 	  	</div>
 	  	<div id="activity" class="interaction-buttons">
